--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Property Management System"
     />
+    <meta name="application-name" content="Mantis Africa" />
+    <meta name="apple-mobile-web-app-title" content="Mantis Africa" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Xhihangule</title>
+    <title>Mantis Africa</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
